--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
 # Core dependencies for RAG System with Google Gemini
 flask==3.0.0
 flask-cors==4.0.0
-Flask-Limiter # Adicionando Flask-Limiter que estava na parte duplicada
-# Core Google Gemini API (version managed by langchain-google-genai)
-# Google Gemini API
-google-generativeai
+Flask-Limiter==2.0.0  # Adicionando versão para Flask-Limiter
+google-generativeai>=0.1.0  # Google Gemini API
 
 # Document processing
-pandas>=2.3.0 # Tentando com a versão mais recente
+pandas>=2.3.0  # Versão mais recente, mas verifique compatibilidade
 pdfplumber==0.10.0
 python-pptx==0.6.23
-python-docx # Adicionando python-docx que estava na parte duplicada
-openpyxl # Adicionando openpyxl que estava na parte duplicada
+python-docx==0.8.11  # Adicionando versão para python-docx
+openpyxl==3.1.2  # Adicionando versão para openpyxl
 
 # Machine Learning and Embeddings
 sentence-transformers>=3.0.0
-# faiss-cpu==1.7.4 # Instalar via Conda: conda install -c pytorch faiss-cpu
-# numpy==1.24.4 # Comentado para permitir que o pip resolva uma versão compatível com Python 3.13
+# FAISS (CPU/GPU support)
+# Instale via Conda se necessário:
+# conda install -c pytorch faiss-cpu
+# conda install -c pytorch faiss-gpu
+
 # Environment and Configuration
 python-dotenv==1.0.0
-
-# Optional: GPU support for FAISS (uncomment if needed)
-# faiss-gpu==1.7.4
-# Development and Testing (optional)
-# pytest==7.4.3 # Descomentado para referência, mas pode ser gerenciado por extras_require no setup.py
-# pytest-flask==1.3.0 # Descomentado para referência
 
 # LangChain dependencies
 langchain>=0.1.0,<0.2.0
 langchain-google-genai>=0.1.0
 langchain-community>=0.0.20
 langchain-huggingface>=0.0.1
-# pytest==7.4.3
-# pytest-flask==1.3.0
-datasets>=2.0.0 # Adicionado para RAGAS
+datasets>=2.0.0  # Adicionado para RAGAS
+
+# Development and Testing (optional)
+pytest==7.4.3
+pytest-flask==1.3.0
+
+# RAGAS dependency
+ragas
